# MobileGlues

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  build.gradle.kts  local.properties  mg.pbtx  mg_full.pbtx  settings.gradle.kts  trace.bat
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/androidTest/java/com/fcl/plugin/mobileglues/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  CMakeLists.txt  main.c
app/src/main/cpp/egl/: egl.c  loader.c
app/src/main/cpp/gl/: buffer.cpp  drawing.c  drawing.h  envvars.c  framebuffer.c  framebuffer.h  getter.cpp  getter.h  gl.c  gl.h  gl_native.c  gl_stub.c  loader.c  log.h  mg.c  mg.h  program.c  program.h  shader.c  shader.h  texture.c  texture.cpp  texture.h
app/src/main/cpp/gl/glsl/: glsl_for_es.cpp  glsl_for_es.h
app/src/main/cpp/gles/: gles.h  loader.c  loader.h
app/src/main/cpp/mobileglues/include/: version.h
app/src/main/cpp/mobileglues/src/: main.cpp  main.h
app/src/main/java/com/fcl/plugin/mobileglues/: MainActivity.kt
app/src/main/java/com/fcl/plugin/mobileglues/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
src/main/cpp/: CMakeLists.txt  egl.cpp  egl.h  gl.c  gles3.h  includes.h  init.cpp  main.c  main.cpp  native-lib.cpp  version.h
src/main/cpp/config/: config.c  config.cpp  config.h  gpu_utils.c  gpu_utils.cpp  gpu_utils.h  settings.c  settings.cpp  settings.h
src/main/cpp/egl/: egl.c  egl.cpp  egl.h  loader.c  loader.cpp  loader.h
src/main/cpp/gl/: buffer.c  buffer.cpp  buffer.h  drawing.c  drawing.cpp  drawing.h  envvars.cpp  envvars.h  framebuffer.c  framebuffer.cpp  framebuffer.h  getter.c  getter.cpp  getter.h  gl.c  gl.cpp  gl_modified.c  gl_native.c  gl_native.cpp  gl_stub.c  gl_stub.cpp  glext.h  loader.h  log.c  log.cpp  log.h  mg.c  mg.cpp  mg.h  multidraw.cpp  multidraw.h  pixel.cpp  pixel.h  program.c  program.cpp  program.h  shader.c  shader.cpp  shader.h  texture.c  (+5 more)
src/main/cpp/gl/DSA/: DSAWrapper.cpp  DSAWrapper.h
src/main/cpp/gl/ExtWrappers/: DSAWrapper.cpp  DSAWrapper.h  MultiBindWrapper.cpp  MultiBindWrapper.h
src/main/cpp/gl/FSR1/: FSR1.cpp  FSR1.h  FSRShaderSource.h
src/main/cpp/gl/glsl/: cache.cpp  cache.h  glsl_for_es.cpp  glsl_for_es.h  preConvertedGlsl.cpp  preConvertedGlsl.h
src/main/cpp/gles/: gles.h  loader.c  loader.cpp  loader.h
src/main/cpp/glx/: lookup.c  lookup.cpp  lookup.h
src/main/cpp/include/: android_debug.h
src/main/cpp/include/EGL/: egl.h  eglext.h  eglplatform.h
src/main/cpp/include/GL/: glext.h
src/main/cpp/include/GLES/: gl32.h
src/main/cpp/shaders/: multidraw_compute.comp
src/test/java/com/fcl/plugin/mobileglues/: ExampleUnitTest.kt
